--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "scripts": {
         "start": "node src/server.js",
         "dev": "nodemon src/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "update-vungtau-data": "node scripts/update-vungtau-data.js",
+        "backup-vungtau-data": "node src/utils/backupVungTauData.js",
+        "backup-and-update-vungtau": "node scripts/backup-and-update-vungtau.js",
+        "test-vungtau-data": "node scripts/test-update.js",
+        "test-connection": "node scripts/test-connection.js"
     },
     "keywords": [
         "hydrology",
