--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "express": "^4.21.2",
         "helmet": "^7.1.0",
         "joi": "^18.0.0",
+        "moment": "^2.30.1",
         "mongoose": "^8.17.0",
         "morgan": "^1.10.0",
         "node-cron": "^4.2.1"
