--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "axios": "^1.11.0",
         "cheerio": "^1.1.2",
         "cors": "^2.8.5",
+        "deep-equal": "^2.2.3",
         "dotenv": "^16.6.1",
         "express": "^4.21.2",
         "helmet": "^7.1.0",
