--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "deep-equal": "^2.2.3",
         "dotenv": "^16.6.1",
         "express": "^4.21.2",
+        "express-validator": "^7.2.1",
         "helmet": "^7.1.0",
         "joi": "^18.0.0",
         "moment": "^2.30.1",
